--- a/SMWM_STM32.ioc
+++ b/SMWM_STM32.ioc
@@ -59,8 +59,8 @@ Mcu.PinsNb=33
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
-MxCube.Version=6.1.1
-MxDb.Version=DB.6.0.10
+MxCube.Version=6.4.0
+MxDb.Version=DB.6.0.40
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.ForceEnableDMAVector=true
@@ -126,8 +126,12 @@ PB10.GPIO_PuPd=GPIO_NOPULL
 PB10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB10.Mode=TX_Only_Simplex_Unidirect_Master
 PB10.Signal=SPI2_SCK
+PB13.GPIOParameters=GPIO_Pu
+PB13.GPIO_Pu=GPIO_PULLUP
 PB13.Mode=I2C
 PB13.Signal=I2C2_SCL
+PB14.GPIOParameters=GPIO_Pu
+PB14.GPIO_Pu=GPIO_PULLUP
 PB14.Locked=true
 PB14.Mode=I2C
 PB14.Signal=I2C2_SDA
@@ -158,8 +162,12 @@ PB6.Signal=GPIO_Output
 PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=B1_TIMER_IN
 PB7.Signal=S_TIM4_CH2
+PB8.GPIOParameters=GPIO_Pu
+PB8.GPIO_Pu=GPIO_PULLUP
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
+PB9.GPIOParameters=GPIO_Pu
+PB9.GPIO_Pu=GPIO_PULLUP
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
 PC0.GPIOParameters=GPIO_Speed,GPIO_Label
@@ -227,7 +235,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32L476RGTx
-ProjectManager.FirmwarePackage=STM32Cube FW_L4 V1.16.0
+ProjectManager.FirmwarePackage=STM32Cube FW_L4 V1.17.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -238,14 +246,14 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=test_L476.ioc
-ProjectManager.ProjectName=test_L476
+ProjectManager.ProjectFileName=SMWM_STM32.ioc
+ProjectManager.ProjectName=SMWM_STM32
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM4_Init-TIM4-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_I2C2_Init-I2C2-false-HAL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=80000000
 RCC.APB1Freq_Value=80000000
